# igr205_palette

./: .gitignore  CMakeLists.txt  README.md
paletteWidget/: TestPalette.pro  mainwindow.cpp  mainwindow.h  texture2d.cpp  texture2d.h
src/: viewer.cc
src/paletteWidget/: canvas.cpp  canvas.h  dish.cpp  dish.h  dishtools.cpp  dishtools.h  palettewidget.cpp  palettewidget.h  tessel.cpp  tessel.h
src/shaders/: dish.frag  dish.vert  draw.frag  picking.frag  simple.frag  simple.vert  textureWidget.frag  textureWidget.vert
src/window/: alignedbox.hh  glview.cc  glview.hh  glwidget.cpp  glwidget.h  glwindow.cc  glwindow.hh  mainwindow.cc  mainwindow.hh  model.cc  model.hh  patch.cpp  patch.h  qtlogo.cpp  qtlogo.h  trackball.cc  trackball.hh
